# Auto-Claude_LM-Studio

./: CHANGELOG.md  CLAUDE.md  README.md  check_tasks.py  litellm_config.yaml  package-lock.json  package.json  temp_log.txt  test_model_list.py
.github/workflows/: beta-release.yml  ci.yml  release.yml
apps/backend/: __init__.py  comprehensive_analysis.json  phase_config.py  requirements.txt  test_lm_studio_connection.py
apps/backend/cli/: workspace_commands.py
apps/backend/core/: workspace.py  worktree.py
apps/backend/core/workspace/: display.py  git_utils.py
apps/backend/runners/ai_analyzer/: lm_studio_client.py  runner.py
apps/backend/runners/github/: orchestrator.py
apps/backend/runners/github/services/: parallel_followup_reviewer.py
apps/frontend/: package-lock.json  package.json
apps/frontend/src/main/: app-logger.ts  cli-tool-manager.ts  env-utils.ts  index.ts  notification-service.ts  rate-limit-detector.ts
apps/frontend/src/main/__tests__/: cli-tool-manager.test.ts  env-utils.test.ts
apps/frontend/src/main/agent/: agent-manager.ts  agent-process.ts  agent-queue.ts  types.ts
apps/frontend/src/main/claude-profile/: usage-monitor.ts
apps/frontend/src/shared/types/: ipc.ts  (+5 more)
auto-claude/: run.py
auto-claude/runners/: spec_runner.py
auto-claude/ui/: menu.py
debug/: standalone_discovery.js  test_broadcast.js
guides/: LITELLM-SETUP.md
temp_glm_monitor/: Cargo.toml  LICENSE  Makefile  README.md  config.example.toml
temp_glm_monitor/src/: api.rs  app.rs  config.rs  main.rs  models.rs  terminal.rs  ui.rs
tests/: test_security_cache.py
(+67 files in other folders)
